--- a/RickNotifications/RickNotifications.Android/Resources/layout/Activity_Splash.xml
+++ b/RickNotifications/RickNotifications.Android/Resources/layout/Activity_Splash.xml
@@ -7,7 +7,7 @@
         android:id="@+id/animation_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:lottie_fileName="63793-404-lost-in-space.json"
+        app:lottie_fileName="63824-topset-boy-on-swing.json"
         app:lottie_autoPlay="true"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
